# suitcase

./: .gitattributes  .gitignore  .readthedocs-mkdocs.yml  .readthedocs.yaml  COPYING  GNUmakefile  Makefile.am  README.md  commandline.c  commandline.h  configure.ac  daemonize.c  daemonize.h  dbsimple.c  dbsimple.h  dbsimple_dummy.c  dbsimple_mysql.c  dbsimple_sqlite3.c  dbsimplebase.c  dbsimplebase.h  exampledb.c  exampledb.h  examplelua.c  examplelua.h  execute.c  execute.h  executelua.c  executelua.h  executepython.c  executepython.h  executetcl.c  executetcl.h  io.h  iso8601.c  iso8601.h  janitor.c  janitor.h  logging.c  logging.h  longgetopt.c  (+28 more)
docs/: documentation.md  index.md  mkdocs.yml  pyproject.toml  requirements.txt
m4/: dynamic_mysql.m4  dynamic_sqlite3.m4
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
tests/: longgetopttest.c  suitcasetest.c
