[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "suitcase"
authors = [{name = "Berry", email = "berry@halderen.net"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx~=4.2.0",
    "myst_parser",
    "furo",
    "nbsphinx",
]
